# chat

./: .env.template  .gitignore  CLAUDE.md  chat_project.yaml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.yamlproject/: config.yaml
db/data/: postmaster.pid
db/data/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
db/data/base/16384/: 1247  1249  1255  1255_fsm  1255_vm  1259  1259_fsm  16488  16493  16494  16500  16502  16504  16505  16510  16511  16518  17051  17051_fsm  (+79 more)
db/data/global/: 1260  1262  pg_control  pg_internal.init
db/data/pg_xact/: 0000
db/init/: init.sql
docs/: README.md  search.md
sql/: add_fts_with_truncation.sql  check_chunk_sizes.sql  identify_large_chunks.sql
src/chat/: anthropic.py  app.py  conversation.py  conversation_storage.py  google_gemini.py  json_util.py  llm_provider.py  logging_util.py  open_ai.py  perplexity.py
src/chat/ai/: anthropic.py  bedrock.py  google_gemini.py  llm_provider.py  ollama.py  open_ai.py  perplexity.py  provider_manager.py
src/chat/conversation/: conversation_storage.py
src/chat/rag/: __init__.py  chat_utils.py  rag_chat.py  rag_service.py  torch_fix.py
src/chat/ui/: chat.py  chat.py.fix  chat.py.new  chat_utils.py  conversation_manager.py  search_interface.py  sidebar.py  sidebar_rag.py
src/chat/util/: json_util.py  streaming_util.py
test/: test_all_providers_streaming.py  test_bedrock.py  test_bedrock_access.py  test_litellm_streaming.py  test_search_ui.py  test_stream_anthropic.py  test_stream_openai.py  test_stream_openai_json.py  test_streaming.py
(+1 files in other folders)
