[project]
name = "chat-app"
version = "0.1.0"
description = "A Streamlit chat app using LiteLLM and OpenAI"
authors = [
    {name = "Rick Hightower",email = "richardhightower@gmail.com"}
]
readme = "docs/README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "streamlit (>=1.45.1,<2.0.0)",
    "litellm (>=1.70.0,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "requests (>=2.31.0,<3.0.0)",
    "boto3 (>=1.30.0,<2.0.0)",
    "vector-rag @ file:///Users/richardhightower/src/vector-rag/dist/vector_rag-1.2.12.tar.gz",
    "sqlalchemy (>=2.0.36,<3.0.0)",
    "pgvector (>=0.3.6,<0.4.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "sentence-transformers (>=2.2.2,<3.0.0)",
    "torch (>=2.2.0,<3.0.0)"
]

[[tool.poetry.packages]]
include = "chat"
from = "src"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
